<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.ulap_research.weatherforecasterproject.TabbedMyActivity" >
    <item android:id="@+id/refresh"
        android:title="@string/action_refresh"
        android:orderInCategory="100"
        android:showAsAction="never" />

    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never" />

    <item android:id="@+id/action_about"
        android:title="@string/action_about"
        android:orderInCategory="100"
        android:showAsAction="never" />

    <item android:id="@+id/action_report"
        android:title="@string/action_report"
        android:orderInCategory="100"
        android:showAsAction="never" />

    <item android:id="@+id/action_logout"
        android:title="@string/action_logout"
        android:orderInCategory="100"
        android:showAsAction="never" />
</menu>
